fix own video not showing on setup

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ video {
 }
 
 /* big speaker video */
+.participants-1 .videoContainer,
 .participants-2 .videoContainer,
 .videoContainer.speaking {
 	position: absolute;
